--- a/package.json
+++ b/package.json
@@ -1,6 +1,14 @@
 {
 	"name": "@svelte-things/toast",
 	"version": "0.5.0",
+	"author": "itsarunkumar",
+	"license": "MIT",
+	"keywords": [
+		"svelte",
+		"toast",
+		"ui",
+		"helpers"
+	],
 	"scripts": {
 		"dev": "vite dev",
 		"build": "vite build && npm run package",
@@ -53,7 +61,7 @@
 	"types": "./dist/index.d.ts",
 	"type": "module",
 	"dependencies": {
-		"@svelte-things/toast": "^0.0.2",
+		"@svelte-things/toast": "^0.5.0",
 		"clsx": "^2.0.0",
 		"tailwind-merge": "^1.14.0"
 	}
