--- a/.github/workflows/publish-npm.yml
+++ b/.github/workflows/publish-npm.yml
@@ -18,11 +18,9 @@ jobs:
           node-version: '18.x'
           registry-url: 'https://registry.npmjs.org'
 
-      - name: Install dependencies
-        uses: npm ci
+      - run: npm ci
 
-      - name: Publish
-        uses: npm publish --access public
+      - run: npm publish --access public
 
         env:
           NODE_AUTH_TOKEN: ${{secrets.NPM_AUTH_TOKEN}}
