--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
 	"main": "./dist/index.js",
 	"type": "module",
 	"dependencies": {
+		"@vercel/analytics": "^1.3.1",
 		"clsx": "^2.0.0",
 		"tailwind-merge": "^1.14.0"
 	}
