force installation of packages due to peer dependency

--- a/.github/workflows/publish-npm.yml
+++ b/.github/workflows/publish-npm.yml
@@ -20,7 +20,7 @@ jobs:
           node-version: '18.x'
           registry-url: 'https://registry.npmjs.org'
 
-      - run: npm ci
+      - run: npm i -ff
 
       - run: npm publish --access public
 
